Assignment/Python/Assignment-2.txt

'''1.What are the two values of the Boolean data type? How do you write them?
Ans-
    True,Fales'''
x = 7
y = 25
print(bool(x==y))
False
2. What are the three different types of Boolean operators?
Ans-
    AND, OR, NOT
    
3. Make a list of each Boolean operator's truth tables 
(i.e. every possible combination of Boolean values for the operator and what it evaluate ).
Ans-
True  and True is True
True  and False is False
False and True is False
False and False is False
    
True or True is True
True or False is True
False or True is True
False or False is False
    
not False is True
not True is False
  Input In [72]
    3. Make a list of each Boolean operator's truth tables
       ^
SyntaxError: invalid syntax
#4. What are the values of the following expressions?
print((5 > 4) and (3 == 5))
print(not (5 > 4))
print((5 > 4) or (3 == 5))
print(not ((5 > 4) or (3 == 5)))
print((True and True) and (True == False))
print((not False) or (not True))
False
False
True
False
False
True
5. What are the six comparison operators?
Ans-
    less than ( < ), less than or equal to ( <= ), 
    greater than ( > ), greater than or equal to ( >= ),
    equal to ( == ), and not equal to ( != ).
    
'''6. How do you tell the difference between the equal to and assignment operators?Describe a
condition and when you would use one.
Ans-
    The “=” is an assignment operator is used to assign the value on the right to the variable on the left. 
    The '==' operator checks whether the two given operands are equal or not. If so, it returns true. 
    Otherwise it returns false.
    Ex:'''
a= 5
b= 6
if a==b:
    print("a is equal to b")
else :
    print("a is not equal to b")
a is not equal to b
#7. Identify the three blocks in this code:
spam = 0
if spam == 10:
    print('eggs')
if spam > 5:
    print('bacon')
else:
    print('ham')
    print('spam')
    print('spam')
    
    
ham
spam
spam
'''8. Write code that prints Hello if 1 is stored in spam, prints Howdy if 2 is stored in spam, and prints Greetings!
if anything else is stored in spam.
Ans-'''
spam= input("enter the no ")
if spam=="1":
    print("Hello")
elif spam=="2":
    print("Howdi")
else :
    print("Greetings")
enter the no 54
Greetings
9.If your programme is stuck in an endless loop, what keys you’ll press?
Ans-
    Ctrl+C
    
10. How can you tell the difference between break and continue?
Ans-
    The main difference between both the statements is that when break keyword comes, 
    it terminates the execution of the current loop and passes the control over the next loop or main body, 
    whereas when continue keyword is encountered,
    it skips the current iteration and executes the very next iteration in the loop.
    
11. In a for loop, what is the difference between range(10), range(0, 10), and range(0, 10, 1)?
Ans-
    There is no diffrence.
'''12. Write a short program that prints the numbers 1 to 10 using a for loop. 
Then write an equivalent program that prints the numbers 1 to 10 using a while loop.
Ans-'''
for i in range(1, 11):
    print(i)
        
i= 1
while (i<=10):
    print(i)
    i+=1
1
2
3
4
5
6
7
8
9
10
1
2
3
4
5
6
7
8
9
10
13. If you had a function named bacon() inside a module named spam, how would you call it after importing spam?
Ans- This function can be called with spam.bacon().